<resources>
    <string name="default_company_information">{\"name\":\"(주)데일리\",\"ceo\":\"신인식\",\"bizRegNumber\":\"144–81-15781\",\"itcRegNumber\":\"2016-서울강남-00726\",\"address1\":\"서울시 강남구 테헤란로 20길 20 삼정빌딩 10,11층\",\"phoneNumber1\":\"1800-9120\",\"fax1\":\"02-6455-9331\",\"privacyManager\":\"privacy.korea@dailyhotel.com\"}</string>
    <string name="app_name">DAILYHOTEL</string>
    <string name="facebook_app_id">268888829950610</string>
    <string name="fb_login_protocol_scheme">fb268888829950610</string>
    <string name="homepage">http://dailyhotel.kr</string>
    <string name="contact_us">help@dailyhotel.co.kr</string>
    <string name="currency">원</string>
    <string name="label_currency_more">원~</string>
    <string name="currency_format">###,##0원</string>
    <string name="currency_format_prefix">₩ ###,##0</string>
    <string name="label_map">지도</string>
    <string name="label_list">목록</string>
    <string name="label_dailychoice">데일리초이스</string>
    <string name="label_local_plus">지역 플러스</string>
    <string name="label_google_map">Google Map</string>
    <string name="label_hotel">호텔</string>
    <string name="label_stay">스테이</string>
    <string name="label_gourmet">고메</string>
    <string name="label_restaurant">레스토랑</string>
    <string name="label_shortcut_search_stay">스테이 검색하기</string>
    <string name="label_shortcut_search_gourmet">레스토랑 검색하기</string>
    <string name="label_shortcut_event_main">이벤트 확인하기</string>
    <string name="label_shortcut_booking_list">예약내역 확인하기</string>
    <string name="label_shortcut_disable_message">사용 할 수 없는 shortcut 입니다.</string>
    <string name="label_dailygourmet">DAILYGOURMET</string>
    <string name="label_dailyhotel">DAILYHOTEL</string>
    <string name="label_paradise">PARADISE IS WHERE WE ARE</string>
    <string name="label_share">공유</string>
    <string name="label_doshare">공유하기</string>
    <string name="label_share_kakao">카카오톡으로 보내기</string>
    <string name="label_share_sms">문자메시지로 보내기</string>
    <string name="label_copy_link">링크 복사하기</string>
    <string name="label_question">문의</string>
    <string name="label_sort">정렬</string>
    <string name="label_daily_kakaotalk">데일리 카카오톡 문의</string>
    <string name="label_restaurant_direct_phone">레스토랑 직접 전화 문의</string>
    <string name="label_hotel_reservation_phone">스테이 전화 문의(예약 관련)</string>
    <string name="label_hotel_front_phone">스테이 전화 문의(이용 관련)</string>
    <string name="label_friend">친구</string>
    <string name="label_friend_prefix">친구가</string>
    <string name="label_share_customer">고객</string>
    <string name="label_domestic">국내</string>
    <string name="label_global">해외</string>
    <string name="label_on">ON</string>
    <string name="label_off">OFF</string>
    <string name="label_version">앱 버전</string>
    <string name="label_share_daum_map">카카오맵</string>
    <string name="label_share_naver_map">네이버맵</string>
    <string name="label_share_google_map">구글 지도</string>
    <string name="label_share_tmap_navi">티맵</string>
    <string name="label_share_kakao_navi">카카오내비</string>
    <string name="label_completed">완료</string>
    <string name="label_navigator">길찾기</string>
    <string name="label_copy_address">주소복사</string>
    <string name="label_copy_account_number">계좌번호 복사</string>
    <string name="label_register_card">카드 등록하기</string>
    <string name="label_manager">카드변경/관리하기</string>
    <string name="label_search">검색</string>
    <string name="label_do_search">검색 하기</string>
    <string name="label_filter">필터</string>
    <string name="label_phone">전화</string>
    <string name="label_location">위치</string>
    <string name="label_visit_day">방문일</string>
    <string name="label_call_service">문의하기</string>
    <string name="label_option_update">업데이트 알림</string>
    <string name="label_force_update">필수 업데이트 알림</string>
    <string name="label_simple_payment">간편결제</string>
    <string name="label_card_payment">일반 카드결제</string>
    <string name="label_nights">%1$d박</string>
    <string name="label_gourmet_detail_satisfaction">실제 방문객 %1$d%%가 만족하였습니다. (%2$s명 평가)</string>
    <string name="label_list_satisfaction">%1$d%%</string>
    <string name="label_sender">보낸사람</string>
    <string name="label_send_mail">문의하기</string>
    <string name="label_daily_concierge_to_call">데일리 컨시어지 문의하기</string>
    <string name="label_how_to_visit">방문 방법</string>
    <string name="label_no_parking">주차 불가능</string>
    <string name="label_daily_gourmet">데일리고메</string>
    <string name="label_daily_hotel">데일리호텔</string>
    <string name="label_detail">상세</string>
    <string name="label_select_product">상품 선택하기</string>
    <string name="label_product_detail">상품 상세</string>
    <string name="label_office_hours">이용시간</string>
    <string name="label_checklist">확인사항</string>
    <string name="label_available_persons">이용인원</string>
    <string name="label_reservation_conditions">예약조건</string>
    <string name="label_truereview">트루리뷰</string>
    <string name="label_tripadvisorrating">트립어드바이저 평점</string>
    <string name="label_password">비밀번호</string>
    <string name="label_daily_truereview">데일리 트루리뷰</string>
    <string name="label_dailyhotel_guide">데일리호텔 소개</string>
    <string name="label_dailyh_lifestyle">데일리 라이프스타일 프로젝트</string>
    <string name="label_dailyh_sns">데일리 SNS</string>
    <string name="label_customer">고객님</string>
    <string name="label_region_name">지역명</string>
    <string name="label_subway_station">지하철역</string>
    <string name="label_trueview">트루뷰</string>
    <string name="label_dont_again">다시보지 않기</string>
    <string name="label_search_stay_outbound">해외호텔 검색하기</string>
    <string name="label_do_booking">예약하기</string>
    <string name="label_changing_date">날짜 변경하기</string>
    <string name="label_collapse">접기</string>
    <string name="label_searching_around_location">내 주변 검색 중…</string>
    <string name="label_all">전체</string>
    <string name="label_truereview_count">트루리뷰 %1$s개</string>
    <string name="label_soldout">판매완료</string>
    <string name="label_check_in">체크인</string>
    <string name="label_check_out">체크아웃</string>
    <string name="label_include_tax">(세금/봉사료 포함)</string>
    <string name="label_download_coupon_price">%1$s 쿠폰 다운받기</string>
    <string name="label_event">EVENT</string>
    <string name="label_delete">삭제</string>
    <string name="label_area_list">지역명</string>
    <string name="label_subway_list">지하철역</string>
    <string name="label_allow_notification">알림허용</string>
    <string name="label_can_use_coupon">할인쿠폰 사용</string>
    <string name="label_or">또는</string>
    <string name="label_count_stay">%1$d개 스테이</string>
    <string name="label_count_gourmet">%1$d개 고메</string>
    <string name="label_recently_stay">최근 확인한 스테이</string>
    <string name="label_recently_gourmet">최근 확인한 고메</string>
    <string name="label_popular_tag">인기 태그</string>
    <string name="label_visit_walk">도보</string>
    <string name="label_visit_car">차량</string>
    <string name="label_parking_information">주차 정보 안내</string>
    <string name="label_view_detail">자세히 보기</string>
    <string name="label_truevr">트루VR</string>
    <string name="label_vr">VR</string>
    <string name="label_distance_km">%1$skm</string>
    <string name="label_distance_100m">100m 이내</string>
    <string name="label_currency_usd">USD</string>
    <string name="label_price_coupon">%1$s쿠폰</string>
    <string name="label_menu">메뉴</string>
    <string name="label_number_of_visitors">방문 인원수</string>
    <string name="label_free">무료</string>
    <string name="label_pay">유료</string>
    <string name="label_bracket_free">(무료)</string>
    <string name="label_bracket_pay">(유료)</string>
    <string name="label_cardcd01">외환</string>
    <string name="label_cardcd03">롯데</string>
    <string name="label_cardcd04">현대</string>
    <string name="label_cardcd06">국민</string>
    <string name="label_cardcd11">BC</string>
    <string name="label_cardcd12">삼성</string>
    <string name="label_cardcd14">신한</string>
    <string name="label_cardcd15">한미</string>
    <string name="label_cardcd16">NH</string>
    <string name="label_cardcd17">하나 SK</string>
    <string name="label_cardcd21">해외비자</string>
    <string name="label_cardcd22">해외마스터</string>
    <string name="label_cardcd23">JCB</string>
    <string name="label_cardcd24">해외아멕스</string>
    <string name="label_cardcd25">해외다이너스</string>
    <string name="label_cardcd26">중국은련</string>
    <string name="label_cardcd32">광주</string>
    <string name="label_cardcd33">전북</string>
    <string name="label_cardcd34">하나</string>
    <string name="label_cardcd35">산업카드</string>
    <string name="label_cardcd41">NH</string>
    <string name="label_cardcd43">씨티</string>
    <string name="label_cardcd44">우리</string>
    <string name="label_cardcd48">신협체크</string>
    <string name="label_cardcd51">수협</string>
    <string name="label_cardcd52">제주</string>
    <string name="label_cardcd54">MG새마을금고체크</string>
    <string name="label_cardcd71">우체국체크</string>
    <string name="label_cardcd95">저축은행체크</string>
    <string name="message_detail_copy_address">주소가 복사되었습니다.</string>
    <string name="message_detail_copy_account_number">계좌번호가 복사되었습니다.</string>
    <string name="message_no_more_list">마지막 목록입니다.</string>
    <string name="message_wishlist_tooltip">위시리스트, 확인한 스테이/레스토랑을 확인해보세요!</string>
    <string name="message_end_event">이벤트 기간이 종료되었습니다.\n다른 이벤트를 확인하시겠어요?</string>
    <string name="transition_place_image">placeImage</string>
    <string name="transition_gradient_bottom_view">gradientBottomView</string>
    <string name="transition_gradient_top_view">gradientTopView</string>
    <string name="transition_title">title</string>
    <string name="transition_subtitle">subTitle</string>
    <string name="transition_layout">layout</string>
    <string name="grade_special">특급</string>
    <string name="grade_special1">특1급</string>
    <string name="grade_special2">특2급</string>
    <string name="grade_1">1급</string>
    <string name="grade_2">2급</string>
    <string name="grade_3">3급</string>
    <string name="dialog_btn_text_confirm">확인</string>
    <string name="label_monday">월</string>
    <string name="label_tuesday">화</string>
    <string name="label_wednesday">수</string>
    <string name="label_thursday">목</string>
    <string name="label_friday">금</string>
    <string name="label_saturday">토</string>
    <string name="label_sunday">일</string>
    <string name="label_sort_by">정렬</string>
    <string name="label_sort_by_distance">거리순</string>
    <string name="label_sort_by_low_price">낮은 가격순</string>
    <string name="label_sort_by_high_price">높은 가격순</string>
    <string name="label_sort_by_area">지역별</string>
    <string name="label_wifi">무료WiFi</string>
    <string name="label_breakfast">조식포함</string>
    <string name="label_cooking">취사가능</string>
    <string name="label_bathtub">욕조구비</string>
    <string name="label_pool">수영장</string>
    <string name="label_fitness">피트니스</string>
    <string name="label_parking">주차가능</string>
    <string name="label_allowed_pet">반려동물</string>
    <string name="label_allowed_barbecue">공동바베큐</string>
    <string name="label_business_center">비즈니스센터</string>
    <string name="label_sauna">사우나</string>
    <string name="label_kids_play_room">키즈플레이룸</string>
    <string name="label_computer">PC</string>
    <string name="label_television">TV</string>
    <string name="label_whirlpool">스파월풀</string>
    <string name="label_private_bbq">개별바베큐</string>
    <string name="label_karaoke">노래방</string>
    <string name="label_party_room">파티룸</string>
    <string name="label_guide_permission">앱 권한 설정 안내</string>
    <string name="label_allow_permission">요청 권한</string>
    <string name="message_guide_dialog_permission01">데일리호텔앱에서 다음에 대한 사용 및\n액세스 권한을 요청합니다.</string>
    <string name="message_guide_dialog_permission02">휴대폰 설정 > 어플리케이션 관리 > 데일리호텔 >\n권한 설정 메뉴에서</string>
    <string name="message_guide_dialog_permission_read_phone_state">로그인 기능 및 고객 센터와의 연결을 위해\n앱 권한 설정이 필요합니다. 다음 팝업에서\n권한 설정을 \'허용\'으로 선택해 주세요.</string>
</resources>