<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.GridLayout
        android:id="@+id/amenityRoomGridLayout"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:background="@color/white"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:columnCount="5">

        <com.daily.base.widget.DailyTextView
            android:id="@+id/breakfastTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_breakfast"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_02"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/wifiTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_wifi"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_01"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/cookingTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_cooking"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_03"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/pcTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_computer"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_18"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/bathTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_bathtub"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_04"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/tvTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_television"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_19"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/spaTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_whirlpool"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_20"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/privateBbqTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_private_bbq"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_09"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/karaokeTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_karaoke"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_21"
            app:layout_columnWeight="1"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/partyRoomTextView"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_party_room"
            android:textColor="@color/selector_curation_textcolor"
            android:textSize="11dp"
            app:drawableCompatTop="@drawable/f_ic_facilities_22"
            app:layout_columnWeight="1"/>
    </android.support.v7.widget.GridLayout>
</layout>